--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^1.6.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "sequelize": "^4.42.0"
+    "sequelize": "^4.42.0",
+    "vis": "^4.21.0"
   }
 }
