--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "i": "^0.3.6",
     "mysql2": "^1.6.4",
