--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.6",
     "i": "^0.3.6",
     "mysql2": "^1.6.4",
+    "nodemon": "^1.18.9",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "sequelize": "^4.42.0",
